<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PveActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button0"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="?colorPrimaryContainer"
        android:text=""
        android:textSize="30sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@+id/button3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="?colorPrimaryContainer"
        android:text=""
        android:textSize="30sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintTop_toTopOf="@+id/button4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="?colorPrimaryContainer"
        android:text=""
        android:textSize="30sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button1" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:backgroundTint="?colorPrimaryContainer"
        android:text=""
        android:textSize="30sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="@+id/button4"
        app:layout_constraintStart_toStartOf="@+id/button4" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:backgroundTint="?colorPrimaryContainer"
        android:text=""
        android:textSize="30sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:backgroundTint="?colorPrimaryContainer"
        android:text=""
        android:textSize="30sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="@+id/button4"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintStart_toStartOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button6"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:backgroundTint="?colorPrimaryContainer"
        android:text=""
        android:textSize="30sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintStart_toEndOf="@+id/button3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button7"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:backgroundTint="?colorPrimaryContainer"
        android:text=""
        android:textSize="30sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/button4"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button8"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:backgroundTint="?colorPrimaryContainer"
        android:text=""
        android:textSize="30sp"
        app:cornerRadius="0dp"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:autoSizeTextType="none"
        android:text="@string/ai_still_has"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/button0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autoSizeTextType="none"
        android:text="0, 1, 2, 3, 4, 5, 6, 7, 8"
        android:textColor="@color/red"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintStart_toStartOf="@+id/button0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autoSizeTextType="none"
        android:text="@string/you_still_have"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:autoSizeTextType="none"
        android:text="0, 1, 2, 3, 4, 5, 6, 7, 8"
        android:textColor="@color/blue"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeTextType="none"
        android:onClick="restart"
        android:text="@string/restart"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeTextType="none"
        android:onClick="showSingleOptions"
        android:text="@string/select_number"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>